Add cluster creation part into the test scenarios